crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__temp-ref-passthrough.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/temp-ref-passthrough
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "7\n" [Done]
outcome: Done
