crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__variables__variable-pointer-ref-from-knot.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/variables/variable-pointer-ref-from-knot
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "6\n" [Ended]
outcome: Ended
